# SecondBrainOS

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  BORROWING_memory-lancedb-pro.md  GitHubCLI安装与使用.md  INTEGRATION_WEKNORA_EpisodicMemory.md  README.md  sbo.md  sbo.txt
backend/: .env  .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/sbo_core/: app.py  audit.py  config.py  database.py  degradation.py  errors.py  feedback_service.py  jobs.py  main.py  manage_service.py  models.py  neo4j_graph.py  query_service.py  rerank_client.py  retrieval_pipeline.py  rq.py  services.py  tasks_archive.py  tasks_consolidation.py  tasks_framework.py  tasks_lifecycle.py  tasks_profile.py  tasks_rerank.py  weknora_client.py  worker.py
backend/scripts/: async_tasks_smoke_test.py  deep_query_weknora_smoke_test.py  episodic_api_smoke_test.py  evidence_access_stats_smoke_test.py  feedback_api_smoke_test.py  manage_api_smoke_test.py  neo4j_smoke_test.py  postgres_migration_smoke_test.py  postgres_smoke_test.py  provider_llm_smoke_test.py  redis_smoke_test.py  siliconflow_embeddings_smoke_test.py  weknora_kb_smoke_test.py  weknora_knowledge_search_smoke_test.py  weknora_smoke_test.py
backend/tests/: conftest.py  test_app.py  test_audit_logging.py  test_consolidation_tasks.py  test_db_migrations_and_constraints.py  test_episodic.py  test_feedback.py  test_ingest.py  test_manage.py  test_neo4j_graph_isolation.py  test_profile_tasks.py  test_query.py  test_retrieval_pipeline.py  test_rq.py  test_settings.py  test_tasks_archive.py  (+3 more)
(+74 files in other folders)
